# MulitaMiner2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analysis_reports/: metrics_audit_native-evaluation_2026-07-21.md
archive/: annotate_instances.py
docs/: ADDING_A_MODEL.md  ADDING_A_SCANNER.md  ARCHITECTURE.md  BASELINE_NOTES.md  CONFIG.md  EVALUATION.md  EXPORTS.md  INSTALL.md  PRIORITIZATION.md  SCANNER_CONFIGS.md  TROUBLESHOOTING.md  USAGE.md
docs/superpowers/plans/: 2026-07-20-core-implementation-plan.md  2026-07-21-batch-experiments-plan.md  2026-07-21-embedded-model-plan.md  2026-07-21-native-evaluation-plan.md
docs/superpowers/specs/: 2026-07-20-mulitaminer2-core-design.md  2026-07-21-native-evaluation-design.md
experiments/: README.md  nuextract_native.py
experiments/baselines/: README.md  _baseline_schema.py  build_baseline_openvas.py  build_baseline_qualys.py  normalize_baselines.py
experiments/small_model_study/: README.md  gpu_monitor.py  nuextract_native.py
output_experiments_deepseek/: experiment.json  report.html
resources/openvas/: OpenVAS_JuiceShop.xlsx  OpenVAS_bBWA.xlsx  openvas_artifactory-oss_5.11.0.xlsx
resources/qualys/: Qualys_DVWA.csv  Qualys_DVWA.xlsx  Qualys_VulnLab.csv  Qualys_VulnLab.xlsx
resources/tenable/: TenableWAS_JuiceShop.xlsx  TenableWAS_bWAAP.xlsx
src/mulitaminer/: __init__.py  chunking.py  cli.py  consolidate.py  experiment.py  experiment_report.py  extraction.py  llm.py  models.py  pdf_reader.py  pipeline.py  prioritization.py  scanner_engine.py  settings.py  ui.py  writers.py
src/mulitaminer/configs/llms/: claude-haiku.json  deepseek.json  gpt-4o-mini.json  gpt-4o.json  haiku.json  llama-3.3-70b.json  lmstudio.json  nuextract-smol.json  nuextract-tiny.json  nuextract.json  ollama.json  (+3 more)
src/mulitaminer/evaluation/: __init__.py  align.py  fields.py  report.py  runner.py  scorers.py
src/mulitaminer/exporters/: __init__.py  cais.py  csaf.py  generic.py  sarif.py  tabular.py
src/mulitaminer2/: __init__.py  chunking.py  cli.py  consolidate.py  extraction.py  llm.py  models.py  pipeline.py  reader.py  scanner_engine.py  settings.py  writers.py
src/mulitaminer2/exporters/: __init__.py  cais.py  csaf.py  generic.py  sarif.py  tabular.py
src/mulitaminer2/scanners/: __init__.py  engine.py  openvas.py  openvas_prompt.txt  profile.py  tenable.py  tenable_prompt.txt
tests/: test_batch.py  test_chunking.py  test_cli.py  test_consolidate.py  test_evaluation.py  test_experiment.py  test_experiment_report.py  test_exporters.py  test_extraction.py  test_llm.py  test_models.py  test_pdf_reader.py  test_pipeline.py  test_prioritization.py  test_reader.py  test_scanner_plugin.py  test_segmentation.py  test_ui.py  test_writers.py
tools/: annotate_instances.py  compare_backends.py  compare_v1_v2.py  render_decision_tree.py  render_pipeline.py
(+75 files in other folders)
