[project]
name = "mulitaminer"
version = "2.0.0a1"
description = "Vulnerability extraction from security-scanner PDF reports using LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "openai>=1.40",
    "typer>=0.12",
    "tiktoken>=0.7",
    "pdfplumber>=0.11",
    "pypdfium2>=4.30",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "scipy>=1.11",
    "rapidfuzz>=3.0",
]

[project.scripts]
mulitaminer = "mulitaminer.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mulitaminer"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
